<resources>
    <string name="app_name">Academia</string>
    <string name="titulo">Calcular IMC</string>
    <string name="text_peso">Peso:</string>
    <string name="sigla_peso">kg</string>
    <string name="text_altura">Altura:</string>
    <string name="sigla_altura">m</string>
    <string name="calcular">Calcular</string>
    <string name="valor_imc">IMC: 0</string>
    <string name="text_imc"> </string>
    <string name="btnLogin">Entrar</string>
    <string name="cadastro">Cadastrar</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
</resources>