<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/titulo"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_peso"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/edtTNumDecPeso"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtTNumDecPeso"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtTNumDecAltura"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTNumDecPeso" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sigla_peso"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/edtTNumDecPeso"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_altura"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/edtTNumDecAltura"
        app:layout_constraintTop_toBottomOf="@+id/edtTNumDecPeso" />

    <TextView
        android:id="@+id/textViewImc"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/valor_imc"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCalc" />

    <Button
        android:id="@+id/btCalc"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTNumDecAltura" />

    <TextView
        android:id="@+id/textViewImcT"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_imc"
        android:textColor="?android:attr/textColorPrimary"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewImc" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sigla_altura"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/edtTNumDecAltura"
        app:layout_constraintTop_toBottomOf="@+id/edtTNumDecPeso" />

</androidx.constraintlayout.widget.ConstraintLayout>